@@ -1,4 +1,4 @@
-.TH SG3_UTILS "8" "March 2016" "sg3_utils\-1.43" SG3_UTILS
+.TH SG3_UTILS "8" "April 2016" "sg3_utils\-1.43" SG3_UTILS
 .SH NAME
 sg3_utils \- a package of utilities for sending SCSI commands
 .SH SYNOPSIS
