@@ -2,7 +2,7 @@ sg3-utils (1.43-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 24 Feb 2016 22:00:00 -0500
+ -- Douglas Gilbert <dgilbert@interlog.com>  Thu, 07 Apr 2016 22:00:00 -0400
 
 sg3-utils (1.42-0.1) unstable; urgency=low
 
