@@ -2,7 +2,7 @@ Each utility has its own version number, date of last change and
 some description at the top of its ".c" file. All utilities in the main
 directory have their own "man" pages. There is also a sg3_utils man page.
 
-Changelog for sg3_utils-1.43 [20160405] [svn: r690]
+Changelog for sg3_utils-1.43 [20160407] [svn: r691]
   - sg_senddiag: add --timeout=SEC option
   - sg_sanitize: add --timeout=SEC option
   - sg_format: add --timeout=SEC option
@@ -14,6 +14,7 @@ Changelog for sg3_utils-1.43 [20160405] [svn: r690]
     - decode Requested recovery, TapeAlert response, and
       Service buffer information lpages
     - add '--pdt=DT' option
+  - sg_inq: fix potential unbounded loop in --export
   - sg_reassign+sg_write_same: fix ULONG_MAX problem
   - sg_turs+sg_requests: make both accept '--num=NUM'
     and '--number=NUM' for mutual compatibility
